<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:text="OrderID"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:text="@string/placeholder_text"
                    android:id="@+id/tvOrderID"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/placeholder_text"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:id="@+id/tvResOrder"
                    android:textSize="24sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:layout_marginRight="8dp"
                    android:text="@string/restaurant_address"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:maxLines="2"
                    android:text="@string/placeholder_text"
                    android:id="@+id/tvResAddressOrder"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:layout_marginRight="8dp"
                    android:text="@string/user_address"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:maxLines="2"
                    android:text="@string/placeholder_text"
                    android:id="@+id/tvCustomerAddressOrder"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:layout_marginRight="8dp"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:maxLines="1"
                    android:text="@string/placeholder_text"
                    android:id="@+id/tvPriceOrder"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/status"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/tvStatusOrder"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:text="@string/placeholder_text"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tvDetailOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="@string/detail"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnOpenMap"
                    android:text="@string/open_map"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>