<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderViewPager">
    <RelativeLayout
        android:background="@drawable/driver_card_background"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:background="#AAFFFFFF"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/restaurant"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvRestaurantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/placeholder_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/address"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <!--Enough text characters to for the distance from Earth to Sun in meters so...-->
                    <TextView
                        android:id="@+id/tvDistanceToRestaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorCart"
                        android:maxLength="24"
                        android:text="000.000.000.000.000 kms"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:maxLines="3"
                    android:text="@string/placeholder_text"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_gravity="right"
                    app:backgroundTint="@color/colorPrimary"
                    android:id="@+id/btnAcceptOrder"
                    android:text="@string/accept_this_order"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</FrameLayout>